    GLAN Tank uses PATA.

  [ Ben Hutchings ]
  * Enable BCMA as module, BCMA_HOST_PCI and B43_BCMA (Closes: #649567)
    but limit these to devices not supported by brcmsmac
  * brcmsmac: Enable as module for all architectures
  * Include module taint flags in bug reports
  * lirc_serial: Fix various bugs that may result in a crash, deadlock or
    other failure (Closes: #645811)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 22 Nov 2011 05:26:25 +0000

linux-2.6 (3.1.1-1) unstable; urgency=high

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.1.1

  [ Aurelien Jarno ]
  * [s390x] Add s390x udebs, based on linux-kernel-di-s390x-2.6.
  * [sparc64] Sync udebs with sparc.

  [ Ben Hutchings ]
  * [powerpc] Fix module selection for {ata,ide,scsi-core}-modules udebs
  * [alpha] wire up accept4 syscall, thanks to Michael Cree
  * iwlagn: fix modinfo display for 135 ucode (Closes: #647958)
  * [powerpc] ptrace: Fix build with gcc 4.6
  * [arm] add io{read,write}{16,32}be functions (fixes FTBFS)
  * cifs, freezer: add wait_event_freezekillable and have cifs use it
    (Closes: #488794)
  * [alpha] Remove old, broken udeb configuration (Closes: #647586)
  * DFSG: Remove drivers/staging/ft1000/ft1000-*/*.img, non-free
    firmware for drivers we don't build
  * hfs: fix hfs_find_init() sb->ext_tree NULL ptr oops (CVE-2011-2203)
  * vmscan: fix shrinker callback bug in fs/super.c
  * block: Always check length of all iov entries in blk_rq_map_user_iov()
  * [x86] Add amilo-rfkill driver for some Fujitsu-Siemens Amilo laptops
    (Closes: #631664)

  [ Arnaud Patard ]
  * [arm] add missing ioread/write be functions to ixp4xx to fix FTBFS
  * [armhf] allow to build kernel image for iMX51 and iMX53 and enable some
    iMX53 platforms.
  * [armhf] add ahci for iMX53, pata for iMX51

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Nov 2011 20:08:09 +0000

linux-2.6 (3.1.0-1~experimental.1) experimental; urgency=low
