@@ -14,6 +14,7 @@ linux-2.6 (3.1.2-1) UNRELEASED; urgency=low
   * Include module taint flags in bug reports
   * lirc_serial: Fix various bugs that may result in a crash, deadlock or
     other failure (Closes: #645811)
+  * amilo-rfkill: Use proper functions to write to the i8042 safely
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 22 Nov 2011 05:26:25 +0000
 
